--- a/BulkyWeb/Views/Category/Create.cshtml
+++ b/BulkyWeb/Views/Category/Create.cshtml
@@ -5,14 +5,17 @@
 		<div class="row pb-2"></div>
 		<h2>Create Category</h2>
 		<hr />
-
+		<div asp-validation-summary="All"></div>
 	<div class="mb-3 row p-1">
-		<label class="p-0">Category Name</label>
+			<label asp-for="Name" class="p-0">Category Name</label>
 		<input asp-for="Name" type="text" class="form-control" />
+			<span asp-validation-for="Name" class="text-danger"></span>
 	</div>
 	<div class="mb-3 row p-1">
-		<label class="p-0">Display Order</label>
+			<label asp-for="DisplayOrder" class="p-0">Display Order</label>
 		<input asp-for="DisplayOrder" class="form-control" />
+			<span asp-validation-for="DisplayOrder" class="text-danger"></span>
+
 	</div>
 	<div class="row">
 		<div class="col-6 col-md-3">
@@ -24,8 +27,15 @@
 			</a>
 		</div>
 		<div>
-			hi
+					
+
 </div>
 	</div>
 	</div>
 </form>
+
+		@section Scripts{
+			@{
+		<partial name="_ValidationScriptsPartial"></partial>
+			}
+		}
