--- a/BulkyWeb/Views/Category/Create.cshtml
+++ b/BulkyWeb/Views/Category/Create.cshtml
@@ -5,17 +5,14 @@
 		<div class="row pb-2"></div>
 		<h2>Create Category</h2>
 		<hr />
-		<div asp-validation-summary="All"></div>
+
 	<div class="mb-3 row p-1">
-			<label asp-for="Name" class="p-0">Category Name</label>
+		<label class="p-0">Category Name</label>
 		<input asp-for="Name" type="text" class="form-control" />
-			<span asp-validation-for="Name" class="text-danger"></span>
 	</div>
 	<div class="mb-3 row p-1">
-			<label asp-for="DisplayOrder" class="p-0">Display Order</label>
+		<label class="p-0">Display Order</label>
 		<input asp-for="DisplayOrder" class="form-control" />
-			<span asp-validation-for="DisplayOrder" class="text-danger"></span>
-
 	</div>
 	<div class="row">
 		<div class="col-6 col-md-3">
@@ -27,15 +24,8 @@
 			</a>
 		</div>
 		<div>
-					
-
+			hi
 </div>
 	</div>
 	</div>
 </form>
-
-		@section Scripts{
-			@{
-		<partial name="_ValidationScriptsPartial"></partial>
-			}
-		}
