--- a/BulkyWeb/Views/Category/Delete.cshtml
+++ b/BulkyWeb/Views/Category/Delete.cshtml
@@ -1,25 +1,25 @@
 ﻿@model Category
 
 <form method="post">
+    <input asp-for="CategoryId" hidden/> 
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Category</h2>
+            <h2 class="text-primary">Delete Category</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3 row">
             <label asp-for="Name"></label>
-            <input asp-for="Name" type="text" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span> <!-- "modelOnly" or "None" are other options -->
+            <input asp-for="Name"  disabled class="form-control" />
         </div>
         <div class="mb-3 row">
             <label asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" type="text" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+            <input asp-for="DisplayOrder" disabled class="form-control" />
+            
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary form-control border">Back to List</a>
@@ -29,10 +29,3 @@
 
     </div>
 </form>
-
-@section Scripts{
-    @{
-        <partial name="_ValidationScriptsPartial" />
-        /* this is client side validation */
-    }
-            }
